--- a/WeCanFixIt/wwwroot/css/site.css
+++ b/WeCanFixIt/wwwroot/css/site.css
@@ -1,71 +1,90 @@
-﻿/* Please see documentation at https://docs.microsoft.com/aspnet/core/client-side/bundling-and-minification
-for details on configuring this project to bundle and minify static web assets. */
-
-a.navbar-brand {
-  white-space: normal;
-  text-align: center;
-  word-break: break-all;
+﻿@font-face {
+    font-family: "Custom";
+    font-weight:400;
+    src: url('../assets/fonts/OpenSans-Regular.ttf') format("truetype");
+}
+.container {
+    max-width: 1400px;
+    margin: auto;
+}
+.text-center{
+    text-align:center;
+}
+.caption{
+    display:block;
+}
+.logo {
+    width: 50px;
+    height: 50px;
+}
+.nav-container {
+    width: 100%;
+    height: 150px;
+    background-color: #33a0d1;
+    border-radius: 25px;
+    box-shadow: 5px 10px #888888;
+}
+.navelements-container {
+    float: right;
+    width: 8%;
+    margin-top: 36px;
+    text-align: center;
+}
+.logo-container {
+    float: left;
+    margin-top: 36px;
+    vertical-align: top;
+    display: inline-block;
+    text-align: center;
+    width: 120px;
+}
+.main-container {
+    min-height: 500px;
+    margin: 0;
+    background-color: #373485;
+    border-radius: 30px;
+    box-shadow: 5px 10px #888888;
+}
+.footer {
+    text-align: center;
+    height: 100px;
+    bottom: 0;
+    background-color: #c52b30;
+    border-radius: 35px;
+    box-shadow: 5px 10px #888888;
+    z-index: 1;
 }
 
-/* Provide sufficient contrast against white background */
-a {
-  color: #0366d6;
-}
-
-.btn-primary {
-  color: #fff;
-  background-color: #1b6ec2;
-  border-color: #1861ac;
-}
-
-.nav-pills .nav-link.active, .nav-pills .show > .nav-link {
-  color: #fff;
-  background-color: #1b6ec2;
-  border-color: #1861ac;
-}
-
-/* Sticky footer styles
--------------------------------------------------- */
 html {
-  font-size: 14px;
-}
-@media (min-width: 768px) {
-  html {
-    font-size: 16px;
-  }
-}
-
-.border-top {
-  border-top: 1px solid #e5e5e5;
-}
-.border-bottom {
-  border-bottom: 1px solid #e5e5e5;
-}
-
-.box-shadow {
-  box-shadow: 0 .25rem .75rem rgba(0, 0, 0, .05);
-}
-
-button.accept-policy {
-  font-size: 1rem;
-  line-height: inherit;
-}
-
-/* Sticky footer styles
--------------------------------------------------- */
-html {
-  position: relative;
-  min-height: 100%;
+    font-family: Custom;
 }
 
 body {
-  /* Margin bottom by footer height */
-  margin-bottom: 60px;
+    margin: 0;
+    background-color: #e6e6e7;
 }
-.footer {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  white-space: nowrap;
-  line-height: 60px; /* Vertically center the text there */
+
+h1 {
+    font-size: 45px;
+    margin: 0;
 }
+
+p {
+    margin-top: 15px;
+    font-size: 25px;
+    margin: 0;
+}
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    display: inline;
+}
+
+a {
+    color: black;
+    text-decoration: none;
+    
+}
+
+
