--- a/WeCanFixIt/Views/Home/Index.cshtml
+++ b/WeCanFixIt/Views/Home/Index.cshtml
@@ -3,6 +3,9 @@
 }
 
 <div class="text-center">
-   <h1>Witaj</h1>
+    <h1>Witaj</h1>
     <p> <i>Napraw sam swój pojazd i ciesz się zdobytą wiedzą i oszczędzonymi pieniędzmi</i></p>
+    <a asp-controller="CarsBrand" asp-action="Index" class="button" >
+    <img src="/assets/play-button.svg" class="logo-button" alt="play"/>
+    </a>
 </div>
