--- a/WeCanFixIt/wwwroot/css/site.css
+++ b/WeCanFixIt/wwwroot/css/site.css
@@ -1,6 +1,5 @@
 ﻿@font-face {
     font-family: "Custom";
-    font-weight:400;
     src: url('../assets/fonts/OpenSans-Regular.ttf') format("truetype");
 }
 .container {
@@ -10,13 +9,41 @@
 .text-center{
     text-align:center;
 }
-.caption{
-    display:block;
+.caption {
+    display: block;
 }
 .logo {
     width: 50px;
     height: 50px;
 }
+.logo-button {
+    margin-top: 100px;
+    width: 200px;
+    height: auto;
+    -webkit-transition: .3s ease-in-out;
+    transition: .3s ease-in-out;
+}
+.logo-button:hover{
+    width:180px;
+}
+.form-label{
+    margin-top:50px;
+    font-size:40px;
+}
+
+.button {
+    height:100px;
+}
+.button:hover{
+        cursor: pointer;
+}
+.form-group{
+    position:center;
+    text-align:center;
+    display:flex;
+    flex-direction:column;
+}
+
 .nav-container {
     width: 100%;
     height: 150px;
@@ -26,9 +53,14 @@
 }
 .navelements-container {
     float: right;
-    width: 8%;
+    width: 120px;
     margin-top: 36px;
     text-align: center;
+    -webkit-transition: .3s ease-in-out;
+    transition: .3s ease-in-out;
+}
+.navelements-container:hover{
+    width:110px;
 }
 .logo-container {
     float: left;
@@ -37,19 +69,28 @@
     display: inline-block;
     text-align: center;
     width: 120px;
+    -webkit-transition: .3s ease-in-out;
+    transition: .3s ease-in-out;
+}
+.logo-container:hover{
+    width:110px;
 }
 .main-container {
-    min-height: 500px;
-    margin: 0;
-    background-color: #373485;
+    min-height: 700px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    margin-left: 20px;
+    margin-right: 20px;
+    background-image: linear-gradient(#33a0d1,#373485,#0a3a97);
     border-radius: 30px;
     box-shadow: 5px 10px #888888;
+    color: bisque;
 }
 .footer {
     text-align: center;
     height: 100px;
     bottom: 0;
-    background-color: #c52b30;
+    background-color: #0a3a97;
     border-radius: 35px;
     box-shadow: 5px 10px #888888;
     z-index: 1;
@@ -76,6 +117,7 @@ p {
 }
 ul {
     list-style-type: none;
+    list-style-position: inside;
     margin: 0;
     padding: 0;
     display: inline;
@@ -86,5 +128,16 @@ a {
     text-decoration: none;
     
 }
+select {
+    margin-top: 20px;
+    margin-left: 480px;
+    text-align: center;
+    text-align-last: center;
+    font-size: 25px;
+    max-width: 400px;
+    border-radius: 30px;
+    outline:none;
+}
+
 
 
