--- a/WeCanFixIt/wwwroot/css/site.css
+++ b/WeCanFixIt/wwwroot/css/site.css
@@ -42,7 +42,6 @@
     margin-top:50px;
     font-size:40px;
 }
-
 .button {
     height:100px;
 }
@@ -58,10 +57,21 @@
   width:100px;
   margin-right:100px;
   margin-left:120px;
+  margin-bottom:50px;
 }
 .categories-container {
     position:center;
   display:flex;
+}
+.details-container {
+    position: center;
+    display: flex;
+    min-height:300px;
+    background-color: rgba(163,227,100,.8);
+    margin: 50px 50px 0px 50px;
+    border: 10px solid;
+    border-color: #A3E364;
+    border-radius: 0px 30px 2px 30px;
 }
 
 .nav-container {
