--- a/WeCanFixIt/wwwroot/css/site.css
+++ b/WeCanFixIt/wwwroot/css/site.css
@@ -2,172 +2,26 @@
     font-family: "Custom";
     src: url('../assets/fonts/OpenSans-Regular.ttf') format("truetype");
 }
-.container {
-    max-width: 1400px;
-    margin: auto;
-}
-.text-center{
-    text-align:center;
-}
-.caption {
-    text-align:center;
-    display: block;
-}
-.alert {
-    text-align:center;
-    padding: 20px;
-    background-color: #f44336;
-    color: white;
-    opacity: 0.9;
-    border-radius: 30px;
-}
-.logo {
-    width: 50px;
-    height: 50px;
-}
-.logo-button {
-    margin-top: 100px;
-    width: 200px;
-    -webkit-transition: .3s ease-in-out;
-    transition: .3s ease-in-out;
-}
-.categories-button {
-    margin-top: 100px;
-    width: 100px;
-}
-.logo-button:hover{
-    width:180px;
-}
-.form-label{
-    margin-top:50px;
-    font-size:40px;
-}
-.button {
-    height:100px;
-}
-.button:hover{
-        cursor: pointer;
-}
-.form-group {
-    text-align: center;
-    display: flex;
-    flex-direction: column;
-}
-.categories-group{
-  width:100px;
-  margin-right:100px;
-  margin-left:120px;
-  margin-bottom:50px;
-}
-.categories-container {
-    position:center;
-  display:flex;
-}
-.details-container {
-    position: center;
-    display: flex;
-    min-height:300px;
-    background-color: rgba(163,227,100,.8);
-    margin: 50px 50px 0px 50px;
-    border: 10px solid;
-    border-color: #A3E364;
-    border-radius: 0px 30px 2px 30px;
-}
-
-.nav-container {
-    width: 100%;
-    height: 150px;
-    background-color: #33a0d1;
-    border-radius: 25px;
-    box-shadow: 5px 10px #888888;
-}
-.navelements-container {
-    float: right;
-    width: 120px;
-    margin-top: 36px;
-    text-align: center;
-    -webkit-transition: .3s ease-in-out;
-    transition: .3s ease-in-out;
-}
-.navelements-container:hover{
-    width:110px;
-}
-.logo-container {
-    float: left;
-    margin-top: 36px;
-    vertical-align: top;
-    display: inline-block;
-    text-align: center;
-    width: 120px;
-    -webkit-transition: .3s ease-in-out;
-    transition: .3s ease-in-out;
-}
-.logo-container:hover{
-    width:110px;
-}
-.main-container {
-    min-height: 700px;
-    margin-top: 20px;
-    margin-bottom: 20px;
-    margin-left: 20px;
-    margin-right: 20px;
-    background-image: linear-gradient(#33a0d1,#373485,#0a3a97);
-    border-radius: 30px;
-    box-shadow: 5px 10px #888888;
-    color: bisque;
-}
-.footer {
-    text-align: center;
-    height: 100px;
-    bottom: 0;
-    background-color: #0a3a97;
-    border-radius: 35px;
-    box-shadow: 5px 10px #888888;
-    z-index: 1;
-}
-
-html {
-    font-family: Custom;
-}
-
-body {
-    margin: 0;
-    background-color: #e6e6e7;
-}
-
-h1 {
-    font-size: 45px;
-    margin: 0;
-}
-
-p {
-    margin-top: 15px;
-    font-size: 25px;
-    margin: 0;
-}
-ul {
-    list-style-type: none;
-    list-style-position: inside;
-    margin: 0;
-    padding: 0;
-    display: inline;
-}
 
 a {
     color: black;
     text-decoration: none;
-    
 }
-select {
-    margin-top: 20px;
-    margin-left: 480px;
-    text-align: center;
-    text-align-last: center;
-    font-size: 25px;
-    max-width: 400px;
+
+.alert {
+    background-color: #f44336;
     border-radius: 30px;
-    outline:none;
+    color: white;
+    opacity: 0.9;
+    padding: 20px;
+    text-align: center;
 }
+
+body {
+    background-color: #e6e6e7;
+    margin: 0;
+}
+
 button {
     background-color: Transparent;
     background-repeat: no-repeat;
@@ -176,6 +30,165 @@ button {
     overflow: hidden;
     outline: none;
 }
+
+.button {
+    height: 100px;
+}
+
+    .button:hover {
+        cursor: pointer;
+    }
+
+.caption {
+    display: block;
+    text-align: center;
+}
+
+.categories-button {
+    margin-top: 100px;
+    width: 100px;
+}
+
+.categories-container {
+    display: flex;
+    position: center;
+}
+
+.categories-group {
+    margin:0 100px 120px 120px;
+    width: 100px;
+}
+
+.container {
+    max-width: 1400px;
+    margin: auto;
+}
+
+.details-container {
+    background-color: rgba(163,227,100,.8);
+    border: 10px solid;
+    border-color: #A3E364;
+    border-radius: 0px 30px 2px 30px;
+    display: flex;
+    margin: 50px 50px 0px 50px;
+    min-height: 300px;
+    position: center;
+}
+
+.form-label {
+    margin-top: 50px;
+    font-size: 40px;
+}
+
+.form-group {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+}
+
+.footer {
+    background-color: #0a3a97;
+    border-radius: 35px;
+    bottom: 0;
+    box-shadow: 5px 10px #888888;
+    height: 100px;
+    text-align: center;
+    z-index: 1;
+}
+
+h1 {
+    font-size: 45px;
+    margin: 0;
+}
+
+html {
+    font-family: Custom;
+}
+
+.logo {
+    height: 50px;
+    width: 50px;
+}
+
+.logo-button {
+    margin-top: 100px;
+    width: 200px;
+    -webkit-transition: .3s ease-in-out;
+    transition: .3s ease-in-out;
+}
+
+    .logo-button:hover {
+        width: 180px;
+    }
+
+.logo-container {
+    display: inline-block;
+    float: left;
+    margin-top: 36px;
+    text-align: center;
+    -webkit-transition: .3s ease-in-out;
+    transition: .3s ease-in-out;
+    width: 120px;
+    vertical-align: top;
+}
+
+    .logo-container:hover {
+        width: 110px;
+    }
+
+.main-container {
+    background-image: linear-gradient(#33a0d1,#373485,#0a3a97);
+    border-radius: 30px;
+    box-shadow: 5px 10px #888888;
+    color: bisque;
+    margin:20px 20px 20px 20px;
+    min-height: 700px;
+}
+
+.nav-container {
+    background-color: #33a0d1;
+    border-radius: 25px;
+    box-shadow: 5px 10px #888888;
+    height: 150px;
+    width: 100%;
+}
+
+.navelements-container {
+    float: right;
+    margin-top: 36px;
+    text-align: center;
+    -webkit-transition: .3s ease-in-out;
+    transition: .3s ease-in-out;
+    width: 120px;
+}
+
+    .navelements-container:hover {
+        width: 110px;
+    }
+
+p {
+    font-size: 25px;
+    margin: 15px 0 0 0;
+}
+
+select {
+    border-radius: 30px;
+    font-size: 25px;
+    margin: 20px 0 0 480px;
+    max-width: 400px;
+    outline: none;
+    text-align: center;
+    text-align-last: center;
+}
+
+
+.text-center{
+    text-align:center;
+}
+
+
+
+
 
 
 
