--- a/WeCanFixIt/Views/CarsBrand/Choice.cshtml
+++ b/WeCanFixIt/Views/CarsBrand/Choice.cshtml
@@ -3,28 +3,28 @@
         <div class="categories-container">
            <div class="categories-group">
              <button id="body">
-               <img src="~/assets/car-body.svg" class="categories-button" alt="car-body" />
+               <img src="/assets/images/car-body.svg" class="categories-button" alt="car-body" />
                <span class="caption">Karoseria</span>
               </button>
         </div>
 
            <div class="categories-group">
               <button id="suspension" >
-                <img src="~/assets/supension.svg" class="categories-button" alt="suspension" />
+                <img src="~/assets/images/supension.svg" class="categories-button" alt="suspension" />
                 <span class="caption">Układ jezdy</span>
               </button>
            </div>
 
            <div class="categories-group">
               <button id="chip">
-                <img src="~/assets/chip.svg" class="categories-button" alt="chip" />
+                <img src="~/assets/images/chip.svg" class="categories-button" alt="chip" />
                 <span class="caption">Elektronika</span>
               </button>
            </div>
 
            <div class="categories-group">
               <button id="engine">
-                <img src="~/assets/engine.svg" class="categories-button" alt="engine" />
+                <img src="~/assets/images/engine.svg" class="categories-button" alt="engine" />
                 <span class="caption">Silnik</span>
               </button>
            </div>
@@ -61,7 +61,7 @@
                </div>
 
                <button id="Submit" type="submit">
-                 <img src="/assets/right-arrow.svg" alt="Right arrow" class="logo-button" />
+                 <img src="/assets/images/right-arrow.svg" alt="Right arrow" class="logo-button" />
                </button>
 
             </form>
@@ -69,5 +69,5 @@
         </div>
  @section Scripts {
     <script src="~/lib/jquery/dist/jquery.js"></script>
-    <script type="text/javascript" src="~/js/Categories.js"></script>
+    <script type="text/javascript" src="~/js/Choice.js"></script>
 }
