--- a/WeCanFixIt/Views/Home/Index.cshtml
+++ b/WeCanFixIt/Views/Home/Index.cshtml
@@ -6,6 +6,6 @@
     <h1>Witaj</h1>
     <p> <i>Napraw sam swój pojazd! <br /> Ciesz się zdobytą wiedzą i oszczędzonymi pieniędzmi</i></p>
     <a asp-controller="CarsBrand" asp-action="Index">
-    <img src="/assets/play-button.svg" class="logo-button" alt="play"/>
+    <img src="/assets/images/play-button.svg" class="logo-button" alt="play"/>
     </a>
 </div>
