--- a/WeCanFixIt/Views/Shared/_Layout.cshtml
+++ b/WeCanFixIt/Views/Shared/_Layout.cshtml
@@ -14,21 +14,21 @@
             <nav class="nav-container">
                 <div class="logo-container">
                     <a asp-controller="Home" asp-action="Index">
-                      <img src="~/assets/home.svg" class="logo" alt="logo" />
+                      <img src="/assets/images/home.svg" class="logo" alt="logo" />
                       <span class="caption">WeCanFixIt</span>
                     </a>
                 </div>
 
                 <div class="navelements-container">
                     <a asp-controller="CarsBrand" asp-action="Index">
-                      <img src="~/assets/hammer.svg" class="logo" alt="logo" />
+                      <img src="/assets/images/hammer.svg" class="logo" alt="logo" />
                       <span class="caption">FixIt</span>
                     </a>
                 </div>
 
                 <div class="navelements-container">
                     <a asp-controller="About" asp-action="Index">
-                      <img src="~/assets/info.svg" class="logo" alt="logo" />
+                      <img src="~/assets/images/info.svg" class="logo" alt="logo" />
                       <span class="caption">Info</span>
                      </a>
                 </div>
