--- a/WeCanFixIt/Views/CarsBrand/Index.cshtml
+++ b/WeCanFixIt/Views/CarsBrand/Index.cshtml
@@ -18,7 +18,7 @@
 
             <div class="form-group">
                 <button id="Submit" type="button">
-                    <img src="/assets/right-arrow.svg" alt="Right arrow" class="logo-button" />
+                    <img src="/assets/images/left-arrow.svg" alt="Right arrow" class="logo-button" />
                 </button>
             </div>
 
