--- a/WeCanFixIt/wwwroot/css/site.css
+++ b/WeCanFixIt/wwwroot/css/site.css
@@ -94,6 +94,13 @@ html {
     font-family: Custom;
 }
 
+input[type="checkbox"] {
+    height: 20px;
+    margin-right: 10px;
+    width: 20px;
+}	
+
+
 .logo {
     height: 50px;
     width: 50px;
@@ -134,6 +141,27 @@ html {
     min-height: 900px;
 }
 
+.modal {
+    background-color: rgba(0,0,0,0.4);
+    display: none;
+    height: 100%;
+    left: 0;
+    overflow: auto;
+    position: fixed;
+    padding-top: 200px;
+    top: 0;
+    width: 100%;
+    z-index: 2;
+}
+
+.modal-content {
+    background-image: linear-gradient(#33a0d1,#373485,#0a3a97);
+    border: 1px solid #888;
+    margin: auto;
+    padding: 20px;
+    width: 80%;
+}
+
 .nav-container {
     background-color: #33a0d1;
     border-radius: 25px;
@@ -160,6 +188,30 @@ p {
     margin: 15px 0 0 0;
 }
 
+.progressbar-bar {
+    border-radius: 30px;
+    height: 25px;
+    margin: 10px 0;
+}
+
+.progressbar-container {
+    margin: 100px 0 0 500px;
+    position: relative;
+    width: 350px;
+}
+
+.progressbar-label {
+    left: 45%;
+    position: absolute;
+    top: 2px;
+    z-index: 2;
+}
+
+.result-group {
+    display: flex;
+    margin: 20px 0 0 300px;
+    text-align: center;
+}
 select {
     border-radius: 30px;
     font-size: 25px;
